deployment/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
#    - host: demo.localdev.me
#      http:
#        paths:
#          - backend:
#              service:
#                name: emergency-room-service
#                port:
#                  number: 8282
#            path: /
#            pathType: Prefix
    - host: demo.localdev.me
      http:
        paths:
          - backend:
              service:
                name: kafka-service
                port:
                  number: 9092
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - hostname: localhost
